--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "repo-creator",
+  "name": "repo-creatooor",
   "version": "1.0.0",
   "private": true,
   "description": "Creates pre-configured github repositories",
   "license": "MIT",
-  "author": "0xRaccoon",
+  "author": "Wonderland",
   "main": "index.js",
   "scripts": {
     "create-repo": "ts-node src/create-repo.ts && tsc",
