fix: codeowners optional field
Signed-off-by: 0xRaccoon <raccoon@defi.sucks>

--- a/.github/workflows/repo-creation.yml
+++ b/.github/workflows/repo-creation.yml
@@ -8,7 +8,7 @@ on:
         required: true
       repo_codeowner:
         description: "Codeowners (eg: defi-wonderland/price-solidity-codeowners)"
-        required: true
+        required: false
       from_template_owner:
         description: "Template owner (eg. defi-wonderland)"
         required: false
