fix: polish repo creator (#4)
-Improve readme.
-Change the repo owner and repo template to only one input.
-Set dev as the default branch.
-Add soft asserts and assert all.
-Create configs.

Co-authored-by: 0xGorilla <84932007+0xGorilla@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-GITHUB_OWNER=
-GITHUB_TOKEN=
-GITHUB_REPO_NAME=
+GH_OWNER=
+GH_TOKEN=
+GH_REPO_NAME=
 GH_USER_CREATOR=
 GH_CODEOWNER=
-GH_TEMPLATE_OWNER=
-GH_TEMPLATE_REPO=
+GH_TEMPLATE=
+DISCORD_WEBHOOK=
