--- a/.github/workflows/repo-creation.yml
+++ b/.github/workflows/repo-creation.yml
@@ -7,13 +7,10 @@ on:
         description: "Repository name"
         required: true
       repo_codeowner:
-        description: "Codeowners (eg: @defi-wonderland/price-solidity-codeowners)"
+        description: "Codeowners (default: @defi-wonderland/default-codeowner)"
         required: false
-      from_template_owner:
-        description: "Template owner (eg. defi-wonderland)"
-        required: false
-      from_template_repo:
-        description: "Template repo (eg. solidity-hardhat-boilerplate)"
+      template:
+        description: "Template (eg. defi-wonderland/solidity-foundry-boilerplate)"
         required: false
 
 jobs:
@@ -50,6 +47,6 @@ jobs:
           GH_REPO_NAME: ${{ github.event.inputs.repo_name }}
           GH_USER_CREATOR: ${{ github.actor }}
           GH_CODEOWNER: ${{ github.event.inputs.repo_codeowner }}
-          GH_TEMPLATE_OWNER: ${{ github.event.inputs.from_template_owner }}
-          GH_TEMPLATE_REPO: ${{ github.event.inputs.from_template_repo }}
+          GH_TEMPLATE: ${{ github.event.inputs.template }}
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         run: yarn create-repo
