--- a/.github/workflows/repo-doctor.yml
+++ b/.github/workflows/repo-doctor.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       repo_name:
-        description: "Repository name (e.g. solidity-foundry-boilerplate)"
+        description: 'Repository name (e.g. solidity-foundry-boilerplate)'
         required: true
 
 jobs:
@@ -14,22 +14,22 @@ jobs:
 
     steps:
       - name: Check out github repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
       - name: Cache node modules
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         env:
           cache-name: cache-node-modules
         with:
-          path: "**/node_modules"
+          path: '**/node_modules'
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
 
       - name: Install node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
-          node-version: "16.x"
+          node-version: '20.x'
 
       - name: Install dependencies
         run: yarn --frozen-lockfile --network-concurrency 1
